Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2866454 by phenaproxima, drunken monkey: Fixed problems in update 8103.
- #2844945 by drunken monkey: Fixed uncaught exception when adding too many
  fields.

Search API 1.0, RC 1 (2017-04-09):
------------------------------------
- #2776659 by drunken monkey, drholera: Removed the deprecated Utility methods.
- #2268809 by drunken monkey: Converted all arrays in the code to use the short
  syntax.
- #2863736 by fran seva, drunken monkey: Added a setDataDefinition() method to
  the Field class.
- #2867118 by drunken monkey: Fixed reported coding standards problems.
- #2839932 by drunken monkey,  borisson_, bmcclure, jacktonkin: Fixed Views
  problems with "Rendered item" fields.
- #2765317 by vasike: Added a "Last" aggregation for aggregated fields.
- #2861657 by drunken monkey: Removed remaining usages of "e.g.".

Search API 1.0, Beta 5 (2017-04-02):
------------------------------------
- #2842029 by vasike, drunken monkey: Added a "plugin helper" service for
  creating index plugins.
- #2863253 by drunken monkey: Added hook infos for all our hooks.
- #2856050 by StryKaizer, drunken monkey, marthinal, borisson_: Added getPath()
  to display plugins and deprecated getUrl().
- #2856003 by borisson_, drunken monkey: Added "index" and "path" to search
  display annotation definition.
- #2842557 by StryKaizer, Boobaa, drunken monkey, borisson_: Fixed "is rendered
  on current page" checks for Views displays with contextual filters.
- #2855157 by dbjpanda: Fixed a small CSS error.
- #2842007 by shashank.mundhra: Fixed DB comment of search_api_item.status
  column.
- #2682369 by Alumei, drunken monkey, swentel, Crell, stBorchert, prics,
  borisson_: Fixed problems with overridden config entities.
- #2645882 by drunken monkey, borisson_: Fixed "items could not be indexed"
  message for "Index now".
- #2641388 by mallezie, drunken monkey, borisson_, janusman: Added various UX