@@ -77,6 +77,7 @@ class BackendTest extends BackendTestBase {
   protected function backendSpecificRegressionTests() {
     $this->regressionTest2557291();
     $this->regressionTest2511860();
+    $this->regressionTest2846932();
   }
 
   /**
@@ -459,6 +460,17 @@ class BackendTest extends BackendTestBase {
     $query->addCondition('body', 'ab ab');
     $results = $query->execute();
     $this->assertEquals(5, $results->getResultCount(), 'Fulltext filters on duplicate short words do not change the result.');
+  }
+
+  /**
+   * Tests changing a field boost to a floating point value.
+   *
+   * @see https://www.drupal.org/node/2846932
+   */
+  protected function regressionTest2846932() {
+    $index = $this->getIndex();
+    $index->getField('body')->setBoost(0.8);
+    $index->save();
   }
 
   /**
